social-style alignment fix

--- a/assets/stylesheets/previews_common.scss
+++ b/assets/stylesheets/previews_common.scss
@@ -51,6 +51,9 @@ html:not(.mobile-view) #list-area.social-style {
 }
 
 #list-area.social-style {
+  .main-link {
+    display: block;
+  }
   .topic-details {
     float: left;
     max-height: none;
